--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Naver -->
     
     <meta name="naver-site-verification" content="a43f6e011ce6deed50366b1f8d2e77b1a9cb125a"/>
+  	<meta name="google-site-verification" content="ZsI4fM7SSbP4TcHGDiupvd3jT3uoHFhvC8QvWQXpkb4" />
     
 
     <title>강서구철거</title>
